Using RUNPIXI_B now. Doesn't work either here. Pixi window opens but not even with background color, loses webgl context....

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
 	"jquery": "extern/jquery-3.5.1.min.js",
 	"pixijs": "extern/pixi.min.js",
-	"RUN PIXI": "extern/RUNPIXI.js",
+	"RUN PIXI": "extern/RUNPIXI_B.js",
 	"The Game": "js/game.js"
 }
