--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,5 @@
 {
 	"jquery": "extern/jquery-3.5.1.min.js",
-	"pixijs": "extern/pixi.min.js",
-	"RUN PIXI": "extern/RUNPIXI_B.js",
+	"Game Engine": "js/gameengine.js",
 	"The Game": "js/game.js"
 }
