--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,6 @@
 {
 	"jquery": "extern/jquery-3.5.1.min.js",
+	"jBash": "extern/jBash.js",
 	"Game Engine": "js/gameengine.js",
 	"Game Map / Editor": "js/gamemap.js",
 	"The Game": "js/game.js"
